Version bump to selenium testcontainer, increased test memory, version bump to 2.8.2 of quarkus, now using mongo dev service for tests, better page lookover verification, moved to using individual server managers for test resources, now using default test class orderer