@@ -58,12 +58,11 @@ dependencies {
     testImplementation group: 'io.quarkus', name: 'quarkus-jacoco' // https://quarkus.io/guides/tests-with-coverage
     testImplementation group: 'io.rest-assured', name: 'rest-assured'
 
-    testImplementation 'org.testcontainers:mongodb:1.16.3'
     testImplementation 'com.github.dasniko:testcontainers-keycloak:1.9.0' //2.1.2 seems dud, fails to start & null pointers
     testImplementation 'org.keycloak:keycloak-admin-client:16.1.1' // 17.0.1 seems dud, might be related to keycloak issue
     testImplementation 'io.jaegertracing:jaeger-testcontainers:0.7.0'
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.1.3'
-    testImplementation 'org.testcontainers:selenium:1.16.3'
+    testImplementation 'org.testcontainers:selenium:1.17.1'
     testImplementation 'com.deque:axe-selenium:3.0'
     testImplementation 'net.datafaker:datafaker:1.3.0'
 }
@@ -83,6 +82,12 @@ compileJava {
 
 compileTestJava {
     options.encoding = 'UTF-8'
+}
+
+test {
+    minHeapSize = "128m" // initial heap size
+    maxHeapSize = "1g" // maximum heap size
+    jvmArgs '-XX:MaxPermSize=1g' // mem argument for the test JVM
 }
 
 //task integrationTest(type: Test) {
